--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/react": "^11.2.5",
     "@testing-library/user-event": "^12.7.1",
     "animate.css": "^4.1.1",
+    "clipboard": "^2.0.8",
     "framer-motion": "^3.10.5",
     "react": "^17.0.1",
     "react-animate-on-scroll": "^2.1.5",
